endpoint: operations
