# docs/swagger.json
@@ -8,6 +8,52 @@
         "version": "1.0"
     },
     "paths": {
+        "/api/v1/payment/deposit": {
+            "post": {
+                "description": "Transferring money between wallets",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Payment System"
+                ],
+                "summary": "transfer money",
+                "parameters": [
+                    {
+                        "description": "Request Payload",
+                        "name": "Payload",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.TransferRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success operation",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/service.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/dto.TransferResponse"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/payment/wallet": {
             "get": {
                 "description": "get wallet by id",
@@ -87,52 +133,6 @@
                                     "properties": {
                                         "data": {
                                             "$ref": "#/definitions/dto.WalletResponse"
-                                        }
-                                    }
-                                }
-                            ]
-                        }
-                    }
-                }
-            }
-        },
-        "/api/v1/payment/wallet/deposit": {
-            "post": {
-                "description": "Transferring money between wallets",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Payment System"
-                ],
-                "summary": "transfer money",
-                "parameters": [
-                    {
-                        "description": "Request Payload",
-                        "name": "Payload",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/dto.TransferRequest"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Success operation",
-                        "schema": {
-                            "allOf": [
-                                {
-                                    "$ref": "#/definitions/service.Response"
-                                },
-                                {
-                                    "type": "object",
-                                    "properties": {
-                                        "data": {
-                                            "$ref": "#/definitions/dto.TransferResponse"
                                         }
                                     }
                                 }
